maple/target/generated-sources/antlr/de/gaalop/maple/parser/MapleParser.java
// $ANTLR 3.1.1 de/gaalop/maple/parser/MapleParser.g 2010-05-04 18:11:55

	package de.gaalop.maple.parser;
	
	import java.util.List;
	import java.util.ArrayList;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class MapleParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "GAALOPARRAY", "LETTER", "DIGIT", "IDENTIFIER", "DECIMAL_LITERAL", "EXPONENT", "FLOATING_POINT_LITERAL", "MINUS", "LSBRACKET", "RSBRACKET", "LBRACKET", "RBRACKET", "ASSIGNMENT", "EQUALS", "COMMA", "PLUS", "STAR", "SLASH", "MODULO", "SEMICOLON", "WEDGE", "WS", "DECLAREARRAY", "COEFFICIENT", "FUNCTION", "MV_SUBSCRIPT", "VARIABLE", "ASSIGNBLADE", "NEGATION"
    };
    public static final int FUNCTION=28;
    public static final int EXPONENT=9;
    public static final int MODULO=22;
    public static final int STAR=20;
    public static final int LETTER=5;
    public static final int GAALOPARRAY=4;
    public static final int ASSIGNBLADE=31;
    public static final int SEMICOLON=23;
    public static final int EQUALS=17;
    public static final int MINUS=11;
    public static final int EOF=-1;
    public static final int MV_SUBSCRIPT=29;
    public static final int LSBRACKET=12;
    public static final int LBRACKET=14;
    public static final int WEDGE=24;
    public static final int WS=25;
    public static final int SLASH=21;
    public static final int NEGATION=32;
    public static final int VARIABLE=30;
    public static final int FLOATING_POINT_LITERAL=10;
    public static final int RSBRACKET=13;
    public static final int COMMA=18;
    public static final int IDENTIFIER=7;
    public static final int PLUS=19;
    public static final int COEFFICIENT=27;
    public static final int ASSIGNMENT=16;
    public static final int DIGIT=6;
    public static final int RBRACKET=15;
    public static final int DECIMAL_LITERAL=8;
    public static final int DECLAREARRAY=26;

    // delegates
    // delegators


        public MapleParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public MapleParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
            this.state.ruleMemo = new HashMap[37+1];
             
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return MapleParser.tokenNames; }
    public String getGrammarFileName() { return "de/gaalop/maple/parser/MapleParser.g"; }


    public static class program_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "program"
    // de/gaalop/maple/parser/MapleParser.g:32:1: program : ( statement )+ ;
    public final MapleParser.program_return program() throws RecognitionException {
        MapleParser.program_return retval = new MapleParser.program_return();
        retval.start = input.LT(1);
        int program_StartIndex = input.index();
        Object root_0 = null;

        MapleParser.statement_return statement1 = null;



        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }
            // de/gaalop/maple/parser/MapleParser.g:32:9: ( ( statement )+ )
            // de/gaalop/maple/parser/MapleParser.g:33:2: ( statement )+
            {
            root_0 = (Object)adaptor.nil();

            // de/gaalop/maple/parser/MapleParser.g:33:2: ( statement )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==GAALOPARRAY||LA1_0==IDENTIFIER) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // de/gaalop/maple/parser/MapleParser.g:0:0: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_program97);
            	    statement1=statement();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, statement1.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 1, program_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "program"

    public static class statement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "statement"
    // de/gaalop/maple/parser/MapleParser.g:36:1: statement : ( declareArray | assignCoefficient ) SEMICOLON ;
    public final MapleParser.statement_return statement() throws RecognitionException {
        MapleParser.statement_return retval = new MapleParser.statement_return();
        retval.start = input.LT(1);
        int statement_StartIndex = input.index();
        Object root_0 = null;

        Token SEMICOLON4=null;
        MapleParser.declareArray_return declareArray2 = null;

        MapleParser.assignCoefficient_return assignCoefficient3 = null;


        Object SEMICOLON4_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }
            // de/gaalop/maple/parser/MapleParser.g:37:2: ( ( declareArray | assignCoefficient ) SEMICOLON )
            // de/gaalop/maple/parser/MapleParser.g:37:4: ( declareArray | assignCoefficient ) SEMICOLON
            {
            root_0 = (Object)adaptor.nil();

            // de/gaalop/maple/parser/MapleParser.g:37:4: ( declareArray | assignCoefficient )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==GAALOPARRAY) ) {
                alt2=1;
            }
            else if ( (LA2_0==IDENTIFIER) ) {
                alt2=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // de/gaalop/maple/parser/MapleParser.g:37:6: declareArray
                    {
                    pushFollow(FOLLOW_declareArray_in_statement111);
                    declareArray2=declareArray();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, declareArray2.getTree());

                    }
                    break;
                case 2 :
                    // de/gaalop/maple/parser/MapleParser.g:37:21: assignCoefficient
                    {
                    pushFollow(FOLLOW_assignCoefficient_in_statement115);
                    assignCoefficient3=assignCoefficient();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, assignCoefficient3.getTree());

                    }
                    break;

            }

            SEMICOLON4=(Token)match(input,SEMICOLON,FOLLOW_SEMICOLON_in_statement119); if (state.failed) return retval;

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 2, statement_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "statement"

    public static class declareArray_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "declareArray"
    // de/gaalop/maple/parser/MapleParser.g:41:1: declareArray : ( GAALOPARRAY LBRACKET var= IDENTIFIER RBRACKET ) -> ^( DECLAREARRAY $var) ;
    public final MapleParser.declareArray_return declareArray() throws RecognitionException {
        MapleParser.declareArray_return retval = new MapleParser.declareArray_return();
        retval.start = input.LT(1);
        int declareArray_StartIndex = input.index();
        Object root_0 = null;

        Token var=null;
        Token GAALOPARRAY5=null;
        Token LBRACKET6=null;
        Token RBRACKET7=null;

        Object var_tree=null;
        Object GAALOPARRAY5_tree=null;
        Object LBRACKET6_tree=null;
        Object RBRACKET7_tree=null;
        RewriteRuleTokenStream stream_LBRACKET=new RewriteRuleTokenStream(adaptor,"token LBRACKET");
        RewriteRuleTokenStream stream_RBRACKET=new RewriteRuleTokenStream(adaptor,"token RBRACKET");
        RewriteRuleTokenStream stream_GAALOPARRAY=new RewriteRuleTokenStream(adaptor,"token GAALOPARRAY");
        RewriteRuleTokenStream stream_IDENTIFIER=new RewriteRuleTokenStream(adaptor,"token IDENTIFIER");

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }
            // de/gaalop/maple/parser/MapleParser.g:42:2: ( ( GAALOPARRAY LBRACKET var= IDENTIFIER RBRACKET ) -> ^( DECLAREARRAY $var) )
            // de/gaalop/maple/parser/MapleParser.g:42:4: ( GAALOPARRAY LBRACKET var= IDENTIFIER RBRACKET )
            {
            // de/gaalop/maple/parser/MapleParser.g:42:4: ( GAALOPARRAY LBRACKET var= IDENTIFIER RBRACKET )
            // de/gaalop/maple/parser/MapleParser.g:42:5: GAALOPARRAY LBRACKET var= IDENTIFIER RBRACKET
            {
            GAALOPARRAY5=(Token)match(input,GAALOPARRAY,FOLLOW_GAALOPARRAY_in_declareArray135); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_GAALOPARRAY.add(GAALOPARRAY5);

            LBRACKET6=(Token)match(input,LBRACKET,FOLLOW_LBRACKET_in_declareArray137); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_LBRACKET.add(LBRACKET6);

            var=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_declareArray141); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_IDENTIFIER.add(var);

            RBRACKET7=(Token)match(input,RBRACKET,FOLLOW_RBRACKET_in_declareArray143); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_RBRACKET.add(RBRACKET7);


            }



            // AST REWRITE
            // elements: var
            // token labels: var
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleTokenStream stream_var=new RewriteRuleTokenStream(adaptor,"token var",var);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 42:51: -> ^( DECLAREARRAY $var)
            {
                // de/gaalop/maple/parser/MapleParser.g:42:54: ^( DECLAREARRAY $var)
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(DECLAREARRAY, "DECLAREARRAY"), root_1);

                adaptor.addChild(root_1, stream_var.nextNode());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 3, declareArray_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "declareArray"

    public static class assignCoefficient_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "assignCoefficient"
    // de/gaalop/maple/parser/MapleParser.g:45:1: assignCoefficient : (mvName= IDENTIFIER LSBRACKET bladeIndex= DECIMAL_LITERAL RSBRACKET ASSIGNMENT value= additive_expression ) -> ^( COEFFICIENT $mvName $bladeIndex $value) ;
    public final MapleParser.assignCoefficient_return assignCoefficient() throws RecognitionException {
        MapleParser.assignCoefficient_return retval = new MapleParser.assignCoefficient_return();
        retval.start = input.LT(1);
        int assignCoefficient_StartIndex = input.index();
        Object root_0 = null;

        Token mvName=null;
        Token bladeIndex=null;
        Token LSBRACKET8=null;
        Token RSBRACKET9=null;
        Token ASSIGNMENT10=null;
        MapleParser.additive_expression_return value = null;


        Object mvName_tree=null;
        Object bladeIndex_tree=null;
        Object LSBRACKET8_tree=null;
        Object RSBRACKET9_tree=null;
        Object ASSIGNMENT10_tree=null;
        RewriteRuleTokenStream stream_LSBRACKET=new RewriteRuleTokenStream(adaptor,"token LSBRACKET");
        RewriteRuleTokenStream stream_ASSIGNMENT=new RewriteRuleTokenStream(adaptor,"token ASSIGNMENT");
        RewriteRuleTokenStream stream_RSBRACKET=new RewriteRuleTokenStream(adaptor,"token RSBRACKET");
        RewriteRuleTokenStream stream_IDENTIFIER=new RewriteRuleTokenStream(adaptor,"token IDENTIFIER");
        RewriteRuleTokenStream stream_DECIMAL_LITERAL=new RewriteRuleTokenStream(adaptor,"token DECIMAL_LITERAL");
        RewriteRuleSubtreeStream stream_additive_expression=new RewriteRuleSubtreeStream(adaptor,"rule additive_expression");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return retval; }
            // de/gaalop/maple/parser/MapleParser.g:46:2: ( (mvName= IDENTIFIER LSBRACKET bladeIndex= DECIMAL_LITERAL RSBRACKET ASSIGNMENT value= additive_expression ) -> ^( COEFFICIENT $mvName $bladeIndex $value) )
            // de/gaalop/maple/parser/MapleParser.g:46:4: (mvName= IDENTIFIER LSBRACKET bladeIndex= DECIMAL_LITERAL RSBRACKET ASSIGNMENT value= additive_expression )
            {
            // de/gaalop/maple/parser/MapleParser.g:46:4: (mvName= IDENTIFIER LSBRACKET bladeIndex= DECIMAL_LITERAL RSBRACKET ASSIGNMENT value= additive_expression )
            // de/gaalop/maple/parser/MapleParser.g:46:5: mvName= IDENTIFIER LSBRACKET bladeIndex= DECIMAL_LITERAL RSBRACKET ASSIGNMENT value= additive_expression
            {
            mvName=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_assignCoefficient167); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_IDENTIFIER.add(mvName);

            LSBRACKET8=(Token)match(input,LSBRACKET,FOLLOW_LSBRACKET_in_assignCoefficient169); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_LSBRACKET.add(LSBRACKET8);

            bladeIndex=(Token)match(input,DECIMAL_LITERAL,FOLLOW_DECIMAL_LITERAL_in_assignCoefficient173); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_DECIMAL_LITERAL.add(bladeIndex);

            RSBRACKET9=(Token)match(input,RSBRACKET,FOLLOW_RSBRACKET_in_assignCoefficient175); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_RSBRACKET.add(RSBRACKET9);

            ASSIGNMENT10=(Token)match(input,ASSIGNMENT,FOLLOW_ASSIGNMENT_in_assignCoefficient177); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ASSIGNMENT.add(ASSIGNMENT10);

            pushFollow(FOLLOW_additive_expression_in_assignCoefficient181);
            value=additive_expression();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_additive_expression.add(value.getTree());

            }



            // AST REWRITE
            // elements: value, mvName, bladeIndex
            // token labels: bladeIndex, mvName
            // rule labels: retval, value
            // token list labels: 
            // rule list labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleTokenStream stream_bladeIndex=new RewriteRuleTokenStream(adaptor,"token bladeIndex",bladeIndex);
            RewriteRuleTokenStream stream_mvName=new RewriteRuleTokenStream(adaptor,"token mvName",mvName);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);
            RewriteRuleSubtreeStream stream_value=new RewriteRuleSubtreeStream(adaptor,"token value",value!=null?value.tree:null);

            root_0 = (Object)adaptor.nil();
            // 46:108: -> ^( COEFFICIENT $mvName $bladeIndex $value)
            {
                // de/gaalop/maple/parser/MapleParser.g:46:111: ^( COEFFICIENT $mvName $bladeIndex $value)
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(COEFFICIENT, "COEFFICIENT"), root_1);

                adaptor.addChild(root_1, stream_mvName.nextNode());
                adaptor.addChild(root_1, stream_bladeIndex.nextNode());
                adaptor.addChild(root_1, stream_value.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 4, assignCoefficient_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "assignCoefficient"

    public static class coefficientExpression_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "coefficientExpression"
    // de/gaalop/maple/parser/MapleParser.g:49:1: coefficientExpression : coefficientBlade ( PLUS coefficientBlade )* ;
    public final MapleParser.coefficientExpression_return coefficientExpression() throws RecognitionException {
        MapleParser.coefficientExpression_return retval = new MapleParser.coefficientExpression_return();
        retval.start = input.LT(1);
        int coefficientExpression_StartIndex = input.index();
        Object root_0 = null;

        Token PLUS12=null;
        MapleParser.coefficientBlade_return coefficientBlade11 = null;

        MapleParser.coefficientBlade_return coefficientBlade13 = null;


        Object PLUS12_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return retval; }
            // de/gaalop/maple/parser/MapleParser.g:50:2: ( coefficientBlade ( PLUS coefficientBlade )* )
            // de/gaalop/maple/parser/MapleParser.g:50:4: coefficientBlade ( PLUS coefficientBlade )*
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_coefficientBlade_in_coefficientExpression208);
            coefficientBlade11=coefficientBlade();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, coefficientBlade11.getTree());
            // de/gaalop/maple/parser/MapleParser.g:50:21: ( PLUS coefficientBlade )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==PLUS) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // de/gaalop/maple/parser/MapleParser.g:50:23: PLUS coefficientBlade
            	    {
            	    PLUS12=(Token)match(input,PLUS,FOLLOW_PLUS_in_coefficientExpression212); if (state.failed) return retval;
            	    pushFollow(FOLLOW_coefficientBlade_in_coefficientExpression215);
            	    coefficientBlade13=coefficientBlade();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, coefficientBlade13.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 5, coefficientExpression_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "coefficientExpression"

    public static class coefficientBlade_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "coefficientBlade"
    // de/gaalop/maple/parser/MapleParser.g:53:1: coefficientBlade : mvName= IDENTIFIER LSBRACKET index= DECIMAL_LITERAL RSBRACKET STAR assignedBlade= blade -> ^( ASSIGNBLADE $index $assignedBlade) ;
    public final MapleParser.coefficientBlade_return coefficientBlade() throws RecognitionException {
        MapleParser.coefficientBlade_return retval = new MapleParser.coefficientBlade_return();
        retval.start = input.LT(1);
        int coefficientBlade_StartIndex = input.index();
        Object root_0 = null;

        Token mvName=null;
        Token index=null;
        Token LSBRACKET14=null;
        Token RSBRACKET15=null;
        Token STAR16=null;
        MapleParser.blade_return assignedBlade = null;


        Object mvName_tree=null;
        Object index_tree=null;
        Object LSBRACKET14_tree=null;
        Object RSBRACKET15_tree=null;
        Object STAR16_tree=null;
        RewriteRuleTokenStream stream_LSBRACKET=new RewriteRuleTokenStream(adaptor,"token LSBRACKET");
        RewriteRuleTokenStream stream_STAR=new RewriteRuleTokenStream(adaptor,"token STAR");
        RewriteRuleTokenStream stream_RSBRACKET=new RewriteRuleTokenStream(adaptor,"token RSBRACKET");
        RewriteRuleTokenStream stream_IDENTIFIER=new RewriteRuleTokenStream(adaptor,"token IDENTIFIER");
        RewriteRuleTokenStream stream_DECIMAL_LITERAL=new RewriteRuleTokenStream(adaptor,"token DECIMAL_LITERAL");
        RewriteRuleSubtreeStream stream_blade=new RewriteRuleSubtreeStream(adaptor,"rule blade");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 6) ) { return retval; }
            // de/gaalop/maple/parser/MapleParser.g:54:2: (mvName= IDENTIFIER LSBRACKET index= DECIMAL_LITERAL RSBRACKET STAR assignedBlade= blade -> ^( ASSIGNBLADE $index $assignedBlade) )
            // de/gaalop/maple/parser/MapleParser.g:54:5: mvName= IDENTIFIER LSBRACKET index= DECIMAL_LITERAL RSBRACKET STAR assignedBlade= blade
            {
            mvName=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_coefficientBlade233); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_IDENTIFIER.add(mvName);

            LSBRACKET14=(Token)match(input,LSBRACKET,FOLLOW_LSBRACKET_in_coefficientBlade235); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_LSBRACKET.add(LSBRACKET14);

            index=(Token)match(input,DECIMAL_LITERAL,FOLLOW_DECIMAL_LITERAL_in_coefficientBlade239); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_DECIMAL_LITERAL.add(index);

            RSBRACKET15=(Token)match(input,RSBRACKET,FOLLOW_RSBRACKET_in_coefficientBlade241); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_RSBRACKET.add(RSBRACKET15);

            STAR16=(Token)match(input,STAR,FOLLOW_STAR_in_coefficientBlade243); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_STAR.add(STAR16);

            pushFollow(FOLLOW_blade_in_coefficientBlade247);
            assignedBlade=blade();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_blade.add(assignedBlade.getTree());


            // AST REWRITE
            // elements: assignedBlade, index
            // token labels: index
            // rule labels: retval, assignedBlade
            // token list labels: 
            // rule list labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleTokenStream stream_index=new RewriteRuleTokenStream(adaptor,"token index",index);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);
            RewriteRuleSubtreeStream stream_assignedBlade=new RewriteRuleSubtreeStream(adaptor,"token assignedBlade",assignedBlade!=null?assignedBlade.tree:null);

            root_0 = (Object)adaptor.nil();
            // 54:90: -> ^( ASSIGNBLADE $index $assignedBlade)
            {
                // de/gaalop/maple/parser/MapleParser.g:54:93: ^( ASSIGNBLADE $index $assignedBlade)
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(ASSIGNBLADE, "ASSIGNBLADE"), root_1);

                adaptor.addChild(root_1, stream_index.nextNode());
                adaptor.addChild(root_1, stream_assignedBlade.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 6, coefficientBlade_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "coefficientBlade"

    public static class blade_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "blade"
    // de/gaalop/maple/parser/MapleParser.g:57:1: blade : primary_expression ;
    public final MapleParser.blade_return blade() throws RecognitionException {
        MapleParser.blade_return retval = new MapleParser.blade_return();
        retval.start = input.LT(1);
        int blade_StartIndex = input.index();
        Object root_0 = null;

        MapleParser.primary_expression_return primary_expression17 = null;



        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 7) ) { return retval; }
            // de/gaalop/maple/parser/MapleParser.g:57:7: ( primary_expression )
            // de/gaalop/maple/parser/MapleParser.g:57:9: primary_expression
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_primary_expression_in_blade270);
            primary_expression17=primary_expression();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, primary_expression17.getTree());

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 7, blade_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "blade"

    public static class additive_expression_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "additive_expression"
    // de/gaalop/maple/parser/MapleParser.g:60:1: additive_expression : multiplicative_expression ( ( PLUS | MINUS ) multiplicative_expression )* ;
    public final MapleParser.additive_expression_return additive_expression() throws RecognitionException {
        MapleParser.additive_expression_return retval = new MapleParser.additive_expression_return();
        retval.start = input.LT(1);
        int additive_expression_StartIndex = input.index();
        Object root_0 = null;

        Token PLUS19=null;
        Token MINUS20=null;
        MapleParser.multiplicative_expression_return multiplicative_expression18 = null;

        MapleParser.multiplicative_expression_return multiplicative_expression21 = null;


        Object PLUS19_tree=null;
        Object MINUS20_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 8) ) { return retval; }
            // de/gaalop/maple/parser/MapleParser.g:61:2: ( multiplicative_expression ( ( PLUS | MINUS ) multiplicative_expression )* )
            // de/gaalop/maple/parser/MapleParser.g:61:4: multiplicative_expression ( ( PLUS | MINUS ) multiplicative_expression )*
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_multiplicative_expression_in_additive_expression281);
            multiplicative_expression18=multiplicative_expression();
